finalização das páginas de cases

--- a/cases/case-contact-center.html
+++ b/cases/case-contact-center.html
@@ -36,7 +36,7 @@
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
 	<body>
-		<header class="main-header bg-cases">
+		<header class="main-header bg-case-contact">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="../index.html">
@@ -127,7 +127,9 @@
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="./cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -155,9 +157,10 @@
 							<p class="subtitle">NOSSOS CASES</p>
 							<hr />
 							<h1>
-								Inspire-se<br />
-								com as nossas<br />
-								histórias de sucesso
+								Como ajudamos a<br />
+								criar presença digital de<br />
+								empresa de telecomunicações<br />
+								em menos de 6 meses
 							</h1>
 						</div>
 					</div>
@@ -165,66 +168,177 @@
 			</section>
 		</header>
 		<main>
-			<section class="cases-main">
+			<section class="case-customer bg-contact-customer">
 				<div class="container">
-					<div class="floater-detail-cases-intern-left">
-						<img
-							src="../assets/img/o-que-fazemos/overlay-curve.png"
-							alt="overlay"
-						/>
-					</div>
-					<div class="row cases-title">
-						<div class="col-md-3 col-12"></div>
+					<div
+						class="row pb-5"
+						style="align-items: center; justify-content: center"
+					>
 						<div
-							class="col-md-6 col-12"
+							class="col-md-6 col-12 text-left green-background-case"
 							style="display: flex; flex-direction: column; align-items: center"
 						>
-							<h2>Cases</h2>
-							<img src="" alt="" />
+							<h3>O CLIENTE</h3>
+							<img src="../assets/img/cases/divisóriaPreta.png" alt="Faixa" />
+							<br />
 							<p>
-								Filtre por segmento:
-								<span class="segment-filter segment-filter-on b2b-buttom"
-									>B2B</span
-								><span class="segment-filter segment-filter-on b2c-buttom"
-									>B2C</span
-								>
+								Pioneira no
+								<strong>desenvolvimento de softwares cognitivos</strong> com
+								metodologias próprias de humanização, a empresa é
+								<strong>especialista em soluções de customer experience</strong
+								>. Além do atendimento tradicional de call center, oferece
+								serviços digitais sob medida para cada tipo de negócio.
+								<br /><br />
+								Com uma <strong>ampla carteira de clientes</strong> composta por
+								empresas de renome em seus segmentos, é reconhecida por sua
+								<strong>excelência no atendimento ao consumidor</strong> pelas
+								principais premiações do setor no Brasil.
 							</p>
 						</div>
 					</div>
-
-					<div
-						class="row cases-row"
-						style="display: flex; align-items: center; justify-content: center"
-					></div>
-					<div
-						class="row cases-row"
-						style="display: flex; align-items: center; justify-content: center"
-					>
-						<div
-							class="col-md-6 col-12"
-							style="
-								display: flex;
-								align-items: center;
-								justify-content: center;
-							"
-						>
-							<a href="./case-mascaras.html" style="width: fit-content">
-								<img src="../assets/img/cases/cta-vejaMais.png" alt="" />
-							</a>
+				</div>
+			</section>
+			<section class="case-main-1">
+				<div class="container">
+					<div class="row pb-5" style="align-items: center">
+						<div class="row pb-5" style="align-items: flex-start">
+							<div class="col-md-1 col-12"></div>
+							<div class="col-md-5 col-12 text-left">
+								<h2 class="title-content" style="margin-bottom: 0">
+									O DESAFIO
+								</h2>
+								<hr />
+								<p class="home-text">
+									No início de 2019, a companhia passou a contar com uma área de
+									Transformação Digital, iniciando o desenvolvimento de
+									<strong>soluções mais interativas</strong>. A partir dela,
+									surgiu a ideia de
+									<strong>recriar e humanizar a marca</strong>, mudando o seu
+									posicionamento no mercado. <br /><br />
+									Diante disso, nosso desafio era
+									<strong
+										>apoiar a construção da presença digital da empresa</strong
+									>, fortalecendo sua imagem como uma marca inovadora, antenada
+									e tecnológica.
+								</p>
+							</div>
+							<div class="col-md-5 col-12 img-service">
+								<img
+									src="../assets/img/cases/caseTelecom-imagem1.png"
+									alt="Foto Nossa História"
+								/>
+							</div>
 						</div>
 					</div>
+				</div>
+				<div class="floater-detail-case-intern-left">
+					<img
+						src="../assets/img/o-que-fazemos/overlay-curve.png"
+						alt="overlay"
+					/>
+				</div>
+			</section>
+
+			<section class="case-main">
+				<div class="container">
+					<div class="row pb-5" style="align-items: center">
+						<div
+							class="row pb-5 flex-adjustment"
+							style="align-items: flex-start"
+						>
+							<div class="col-md-1 col-12"></div>
+							<div class="col-md-5 col-12 img-service">
+								<img
+									src="../assets/img/cases/caseTelecom-imagem2.png"
+									alt="Foto Nossa História"
+								/>
+							</div>
+							<div class="col-md-5 col-12 text-left">
+								<h2 class="title-content" style="margin-bottom: 0">
+									A ESTRATÉGIA
+								</h2>
+								<hr />
+								<p class="home-text">
+									Para alcançar os objetivos do cliente, desenvolvemos uma
+									<strong>estratégia completa</strong>. Entre as ações
+									propostas, estavam a <strong>gestão de redes sociais</strong>,
+									a
+									<strong
+										>criação de materiais de vendas, otimizações no site
+										institucional</strong
+									>
+									e <strong>Inbound Marketing</strong>. <br /><br />
+									Em toda a comunicação, buscamos
+									<strong>reforçar a nova identidade da marca</strong>,
+									trabalhando temas como <strong>soluções digitais</strong> e
+									<strong>diversidade</strong>. Atuamos com foco em
+									<strong>engajamento</strong>, aproximando a marca de seu
+									público por meio de um trabalho de <strong>SAC 2.0</strong>
+									desenvolvido junto ao time da empresa.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="floater-detail-case-intern-right">
+					<img src="../assets/img/cases/paralaxe-direita.png" alt="overlay" />
+				</div>
+			</section>
+
+			<section class="resultados">
+				<div class="chain-overlay-left">
+					<img src="../assets/img/cases/grafico.png" alt="" />
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-2 col-12"></div>
+						<div class="col-md-8 col-12 text-center">
+							<p class="subtitle">OS RESULTADOS</p>
+							<img src="../assets/img/cases/divisóriaPreta.png" alt="Faixa" />
+							<br />
+							<p>
+								Nos primeiros seis meses, já observamos resultados
+								significativos em todos os canais.<br /><br />
+								Foram mais de<br />
+								<strong style="font-size: 24px"
+									>900 curtidas na página do Facebook</strong
+								><br />
+								e um aumento de
+								<strong>45% no número de seguidores no Instagram</strong>.<br />
+								A cada mês, conseguimos uma evolução significativa em alcance e
+								interações. <br /><br />
+							</p>
+						</div>
+					</div>
+					<div class="row pb-5">
+						<div class="col-md-1 col-12"></div>
+						<div class="col-md-10 col-12 text-center">
+							<p>
+								Nos meses seguintes, por meio de otimizações nas páginas,
+								criação de artigos e da forte atuação nos<br />
+								principais canais de aquisição, conseguimos<br />
+								<strong style="font-size: 24px"
+									>aumentar em 22% a taxa de visualizações</strong
+								><br />
+								do site e <strong>diminuir em 10,3% a taxa de rejeição</strong>.
+								<br /><br />
+								Dessa forma, de maneira <strong>100% orgânica</strong>,
+								fortalecemos a presença da marca nas mídias digitais,<br />
+								colocando a empresa em posição de destaque no mercado como uma
+								organização que está<br />
+								<strong>sempre um passo à frente na inovação</strong>.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="chain-overlay-right">
+					<img src="../assets/img/cases/grafico.png" alt="" />
 				</div>
 			</section>
 
 			<section class="seja">
 				<div class="container">
 					<div class="row">
-						<div class="floater-detail-cases-intern-right">
-							<img
-								src="../assets/img/cases/paralaxe-direita.png"
-								alt="overlay"
-							/>
-						</div>
 						<div class="col-md-6 col-12 notebook">
 							<img src="../assets/img/laptop.png" alt="Notebook" />
 						</div>
@@ -238,7 +352,7 @@
 								de sucesso.
 							</h2>
 							<p class="home-text pt-3">
-								<a href="../contato.html" class="btn-green"
+								<a href="./cases.html" class="btn-green"
 									>Confira mais cases
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
@@ -263,19 +377,19 @@
 				</div>
 				<div class="row text-center pt-5 footer-size">
 					<div class="col-sm text-center">
-						<p><a href="#">O que fazemos</a></p>
+						<p><a href="../o-que-fazemos/">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Quem somos</a></p>
+						<p><a href="../quem-somos/nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
+						<p><a href="./cases.html">Nosos cases</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
+						<p><a href="https://blog.poussee.com.br/">Blog</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Contato</a></p>
+						<p><a href="../contato.html">Contato</a></p>
 					</div>
 				</div>
 				<div class="row">
@@ -343,4 +457,3 @@
 <script src="../Content/Plugins/scrollTo/jquery.localScroll.js"></script>
 <script src="../Scripts/main.js"></script>
 <script src="../Content/Plugins/Bootstrap/bootstrap.min.js"></script>
-<script src="../scripts/casesCard.js"></script>
