--- a/cases/case-distribuidora.html
+++ b/cases/case-distribuidora.html
@@ -36,7 +36,7 @@
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
 	<body>
-		<header class="main-header bg-cases">
+		<header class="main-header bg-case-distribuidora">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="../index.html">
@@ -127,7 +127,9 @@
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="#">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="./cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -155,9 +157,10 @@
 							<p class="subtitle">NOSSOS CASES</p>
 							<hr />
 							<h1>
-								Inspire-se<br />
-								com as nossas<br />
-								histórias de sucesso
+								Como aumentamos<br />
+								em 185% o número de <br />
+								usuários de um e-commerce <br />
+								B2B em um mês
 							</h1>
 						</div>
 					</div>
@@ -165,66 +168,189 @@
 			</section>
 		</header>
 		<main>
-			<section class="cases-main">
+			<section class="case-customer bg-distribuidora-customer">
 				<div class="container">
-					<div class="floater-detail-cases-intern-left">
-						<img
-							src="../assets/img/o-que-fazemos/overlay-curve.png"
-							alt="overlay"
-						/>
-					</div>
-					<div class="row cases-title">
-						<div class="col-md-3 col-12"></div>
+					<div
+						class="row pb-5"
+						style="align-items: center; justify-content: center"
+					>
 						<div
-							class="col-md-6 col-12"
+							class="col-md-6 col-12 text-left green-background-case"
 							style="display: flex; flex-direction: column; align-items: center"
 						>
-							<h2>Cases</h2>
-							<img src="" alt="" />
+							<h3>O CLIENTE</h3>
+							<img src="../assets/img/cases/divisóriaPreta.png" alt="Faixa" />
+							<br />
 							<p>
-								Filtre por segmento:
-								<span class="segment-filter segment-filter-on b2b-buttom"
-									>B2B</span
-								><span class="segment-filter segment-filter-on b2c-buttom"
-									>B2C</span
-								>
+								A empresa é considerada
+								<strong
+									>a maior distribuidora de produtos de perfumaria do estado de
+									São Paulo</strong
+								>. Com mais de 30 anos de história, abastece varejistas com
+								produtos das maiores indústrias do Brasil. <br /><br />
+								Presente em todos os municípios de SP e em parte do Paraná,
+								realiza mais de <strong>40 mil entregas por mês</strong>,
+								distribuindo produtos de qualidade para mais de
+								<strong>26 mil estabelecimentos</strong>.
 							</p>
 						</div>
 					</div>
-
-					<div
-						class="row cases-row"
-						style="display: flex; align-items: center; justify-content: center"
-					></div>
-					<div
-						class="row cases-row"
-						style="display: flex; align-items: center; justify-content: center"
-					>
-						<div
-							class="col-md-6 col-12"
-							style="
-								display: flex;
-								align-items: center;
-								justify-content: center;
-							"
-						>
-							<a href="./case-mascaras.html" style="width: fit-content">
-								<img src="../assets/img/cases/cta-vejaMais.png" alt="" />
-							</a>
+				</div>
+			</section>
+			<section class="case-main-1">
+				<div class="container">
+					<div class="row pb-5" style="align-items: center">
+						<div class="row pb-5" style="align-items: flex-start">
+							<div class="col-md-1 col-12"></div>
+							<div class="col-md-5 col-12 text-left">
+								<h2 class="title-content" style="margin-bottom: 0">
+									O DESAFIO
+								</h2>
+								<hr />
+								<p class="home-text">
+									Além do <strong>aumento nas vendas</strong>, a empresa buscava
+									a
+									<strong
+										>ampliação do reconhecimento da marca no ambiente
+										digital</strong
+									>. Seu principal foco era garantir que novos empreendedores
+									conhecessem a loja virtual na Black Friday e se tornassem
+									clientes. <br /><br />
+									Diante das dificuldades do mercado, que ainda enfrentava os
+									reflexos do distanciamento social e dos altos índices de
+									desemprego no país, o desafio se tornou mais complexo.
+								</p>
+							</div>
+							<div class="col-md-5 col-12 img-service">
+								<img
+									src="../assets/img/cases/caseDistribuidora-imagem1.png"
+									alt="Foto Nossa História"
+								/>
+							</div>
 						</div>
 					</div>
+				</div>
+				<div class="floater-detail-case-intern-left">
+					<img
+						src="../assets/img/o-que-fazemos/overlay-curve.png"
+						alt="overlay"
+					/>
+				</div>
+			</section>
+
+			<section class="case-main">
+				<div class="container">
+					<div class="row pb-5" style="align-items: center">
+						<div
+							class="row pb-5 flex-adjustment"
+							style="align-items: flex-start"
+						>
+							<div class="col-md-1 col-12"></div>
+							<div class="col-md-5 col-12 img-service">
+								<img
+									src="../assets/img/cases/caseDistribuidora-imagem2.png"
+									alt="Foto Nossa História"
+								/>
+							</div>
+							<div class="col-md-5 col-12 text-left">
+								<h2 class="title-content" style="margin-bottom: 0">
+									A ESTRATÉGIA
+								</h2>
+								<hr />
+								<p class="home-text">
+									Nos meses que antecederam a Black Friday de 2020, a Poussée,
+									em conjunto com a distribuidora, planejou ações envolvendo uma
+									série de canais digitais de forma simultânea. Foram feitas
+									parcerias com indústrias para o fornecimento de descontos.
+									<br /><br />
+									A estratégia desenvolvida incluiu
+									<strong
+										>postagens nas redes sociais, envio de ofertas por
+										aplicativos de mensagens</strong
+									>
+									e por
+									<strong
+										>SMS, e-mail marketing e anúncios patrocinados no Google Ads
+										e Facebook Ads</strong
+									>. <br /><br />
+									Entre os diferenciais que contribuíram para o sucesso da
+									campanha, podemos citar a
+									<strong>agilidade no desenvolvimento das peças</strong> e o
+									<strong>constante acompanhamento das ações</strong>, a fim de
+									que otimizações certeiras fossem realizadas ao longo do
+									processo.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="floater-detail-case-intern-right">
+					<img src="../assets/img/cases/paralaxe-direita.png" alt="overlay" />
+				</div>
+			</section>
+
+			<section class="resultados">
+				<div class="chain-overlay-left">
+					<img src="../assets/img/cases/grafico.png" alt="" />
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-2 col-12"></div>
+						<div class="col-md-8 col-12 text-center">
+							<p class="subtitle">OS RESULTADOS</p>
+							<img src="../assets/img/cases/divisóriaPreta.png" alt="Faixa" />
+							<br />
+							<p>
+								Ao longo do mês de novembro, alcançamos
+								<strong>números surpreendentes no e-commerce B2B</strong>,<br />
+								muito acima daqueles obtidos na Black Friday anterior.
+								<br /><br />
+								O principal destaque foi o aumento no número de usuários. Em
+								comparação com outubro,<br />
+								<strong style="font-size: 24px"
+									>o crescimento foi de cerca de 185%</strong
+								>.<br />
+								No total, foram
+								<strong
+									>105.514 novos usuários – 208% a mais do que no mês
+									anterior</strong
+								>.<br />
+								Já o número de visualizações das páginas foi
+								<strong>39% maior</strong>. <br /><br />
+								Em comparação com o mesmo período de 2019, os números foram
+								expressivos:<br />
+								<strong style="font-size: 24px"
+									>75,7% mais sessões e 54,8% mais visualizações</strong
+								><br />
+								do que na Black Friday do ano anterior, em que a situação do
+								país era mais estável.<br /><br />
+								Já o crescimento na quantidade de usuários novos foi de
+								<br /><strong style="font-size: 24px">216,9%</strong>.
+								<br /><br />
+							</p>
+						</div>
+					</div>
+					<div class="row pb-5">
+						<div class="col-md-1 col-12"></div>
+						<div class="col-md-10 col-12 text-center">
+							<p>
+								As campanhas patrocinadas, realizadas na semana da Black Friday,
+								geraram cerca de<br />
+								<strong style="font-size: 24px"
+									>175 mil impressões e mais de 4,8 mil cliques</strong
+								>.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="chain-overlay-right">
+					<img src="../assets/img/cases/grafico.png" alt="" />
 				</div>
 			</section>
 
 			<section class="seja">
 				<div class="container">
 					<div class="row">
-						<div class="floater-detail-cases-intern-right">
-							<img
-								src="../assets/img/cases/paralaxe-direita.png"
-								alt="overlay"
-							/>
-						</div>
 						<div class="col-md-6 col-12 notebook">
 							<img src="../assets/img/laptop.png" alt="Notebook" />
 						</div>
@@ -238,7 +364,7 @@
 								de sucesso.
 							</h2>
 							<p class="home-text pt-3">
-								<a href="../contato.html" class="btn-green"
+								<a href="./cases.html" class="btn-green"
 									>Confira mais cases
 									<img src="../assets/img/arrow.png" alt="Seta"
 								/></a>
@@ -263,19 +389,19 @@
 				</div>
 				<div class="row text-center pt-5 footer-size">
 					<div class="col-sm text-center">
-						<p><a href="#">O que fazemos</a></p>
+						<p><a href="../o-que-fazemos/">O que fazemos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Quem somos</a></p>
+						<p><a href="../quem-somos/nossa-historia.html">Quem somos</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
+						<p><a href="./cases.html">Nosos cases</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Nosos cases</a></p>
+						<p><a href="https://blog.poussee.com.br/">Blog</a></p>
 					</div>
 					<div class="col-sm text-center">
-						<p><a href="#">Contato</a></p>
+						<p><a href="../contato.html">Contato</a></p>
 					</div>
 				</div>
 				<div class="row">
@@ -343,4 +469,3 @@
 <script src="../Content/Plugins/scrollTo/jquery.localScroll.js"></script>
 <script src="../Scripts/main.js"></script>
 <script src="../Content/Plugins/Bootstrap/bootstrap.min.js"></script>
-<script src="../scripts/casesCard.js"></script>
