--- a/cases/case-mascaras.html
+++ b/cases/case-mascaras.html
@@ -36,7 +36,7 @@
 		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 	</head>
 	<body>
-		<header class="main-header bg-case-contabil">
+		<header class="main-header bg-case-mascaras">
 			<nav class="menu navbar navbar-expand-lg">
 				<div class="container">
 					<a class="navbar-brand" href="../index.html">
@@ -157,10 +157,9 @@
 							<p class="subtitle">NOSSOS CASES</p>
 							<hr />
 							<h1>
-								Como mudamos o<br />
-								posicionamento de marca <br />
-								com mais de 15 anos <br />
-								de tradição
+								Poussée faz empresa B2B<br />
+								gerar 831 leads em 5 meses<br />
+								com campanha de Google
 							</h1>
 						</div>
 					</div>
@@ -168,41 +167,80 @@
 			</section>
 		</header>
 		<main>
-			<section class="case-customer bg-contabil-customer">
+			<section class="case-customer bg-mascaras-customer">
 				<div class="container">
+					<div class="row" style="align-items: center; justify-content: center">
+						<div
+							class="col-md-6 col-12 text-left"
+							style="
+								display: flex;
+								flex-direction: column;
+								align-items: center;
+								margin-top: 50px;
+							"
+						>
+							<p style="color: white">
+								Não é segredo para ninguém que desde os primeiros meses da
+								pandemia a venda de máscaras no B2B tornou-se uma questão
+								latente. Uma vez que todas as empresas procuravam meios de
+								incorporar este novo produto em seu mix de ofertas.
+								<br /><br />
+								Contudo, diversas indústrias de máscaras acabaram cometendo um
+								deslize: produziram mais do que o procurado. E o resultado foi
+								um aumento significativo nos estoques, sem a vazão necessária
+								para esse produto.
+								<br /><br />
+								Em parceria com a Poussée, uma importante fabricante de máscaras
+								de proteção, desenvolveu uma estratégia fantástica para venda de
+								seus produtos, mostrando o grande sucesso.
+								<br /><br />
+								Veja como foi o processo.
+							</p>
+							<br />
+							<img src="../assets/img/cases/divisoriaVerde.png" alt="Faixa" />
+						</div>
+					</div>
 					<div
 						class="row pb-5"
 						style="align-items: center; justify-content: center"
 					>
 						<div
-							class="col-md-6 col-12 text-left green-background-case"
+							class="col-md-6 col-12 text-left green-background-case-2"
 							style="display: flex; flex-direction: column; align-items: center"
 						>
 							<h3>O CLIENTE</h3>
 							<img src="../assets/img/cases/divisóriaPreta.png" alt="Faixa" />
 							<br />
 							<p>
-								Com
+								Nossa empresa parceira tem orgulho de ser brasileira, pois é
+								conhecida como
+								<strong>sinal de tradição e qualidade em seus serviços</strong>.
+								Com entregas rápidas e agilidade no atendimento, tornou-se
 								<strong
-									>uma carteira de clientes que se estende por todo o Brasil e
-									exterior</strong
-								>, a empresa oferece serviços contábeis e fiscais, além de apoio
-								administrativo e financeiro. <br /><br />
-								Atende principalmente
-								<strong>companhias de grande porte</strong> que precisam de
-								auxílio para otimizar suas tarefas, reduzir custos e tomar
-								decisões estratégicas baseadas em dados. <br /><br />
-								Referência no mercado, tem como diferenciais a
-								<strong>contabilidade consultiva</strong> e sua
-								<strong
-									>expertise em legislações nacionais e internacionais</strong
-								>.
+									>nome de respeito em matéria de confecção de máscaras de
+									proteção</strong
+								>. Tem mais, é uma das empresas que mais se preocupa com
+								questões de sustentabilidade. <br /><br />
+								Para se ter uma ideia: os recursos utilizados para a fabricação
+								dos seus produtos são feitos e inspecionados de forma rigorosa,
+								para que estes não agridam o meio ambiente. Com isso, essa
+								empresa eleva o nível de consciência e satisfação em entregar
+								serviços de qualidade.
+								<br /><br />
+								Todas as máscaras confeccionadas pela empresa parceira são
+								testadas e aprovadas na proteção contra o novo Coronavírus e de
+								outras patologias de transmissão aérea por gotículas e projeção
+								de fluidos corpóreos.
+								<br /><br />
+								Produzidas em tripla camada, garantem excelente adaptação ao
+								contorno da face, proporcionando conforto. São certificadas por
+								laudos de análises microbiológicas e notificadas pela ANVISA.
 							</p>
 						</div>
 					</div>
 				</div>
 			</section>
-			<section class="case-main-1">
+			<section class="case-main-2">
 				<div class="container">
 					<div class="row pb-5" style="align-items: center">
 						<div class="row pb-5" style="align-items: flex-start">
@@ -213,20 +251,19 @@
 								</h2>
 								<hr />
 								<p class="home-text">
-									Apesar do tempo de mercado, a empresa percebeu que sua
-									estrutura diferenciada era pouco reconhecida pelo seu público.
-									Sua identidade visual e sua comunicação como um todo não
-									condiziam com o seu porte.
-									<br /><br />
-									Além de ressaltar seus diferenciais, havia a necessidade de se
-									posicionar como uma empresa que se preocupa com a qualidade de
-									vida dos profissionais. A valorização humana sempre esteve em
-									seu DNA, mas isso não era mostrado em seus canais digitais.
+									Com a chegada da crise sanitária desencadeada pela pandemia, a
+									empresa parceira assumiu o desafio de
+									<strong
+										>investir na produção massiva de máscaras de
+										proteção</strong
+									>. <br /><br />
+									E assim crescer na venda de máscaras no B2B. Veja como a nossa
+									estratégia entregou muito mais do que o previsto.
 								</p>
 							</div>
 							<div class="col-md-5 col-12 img-service">
 								<img
-									src="../assets/img/cases/caseContabil-imagem1.png"
+									src="../assets/img/cases/caseMascara-imagem1.png"
 									alt="Foto Nossa História"
 								/>
 							</div>
@@ -251,7 +288,7 @@
 							<div class="col-md-1 col-12"></div>
 							<div class="col-md-5 col-12 img-service">
 								<img
-									src="../assets/img/cases/caseContabil-imagem2.png"
+									src="../assets/img/cases/caseMascara-imagem2.png"
 									alt="Foto Nossa História"
 								/>
 							</div>
@@ -261,17 +298,21 @@
 								</h2>
 								<hr />
 								<p class="home-text">
-									Para transformar o posicionamento da empresa e destacá-la no
-									mercado como uma grande empregadora, iniciamos pela
-									reformulação da identidade visual. Desenvolvemos um novo
-									playbook, com tons sóbrios e formas que proporcionam mais
-									dinamismo ao design.
+									Nossa solução focada em venda de máscaras no B2B foi elaborada
+									em forma de
+									<strong>anúncios de display no Google Ads</strong>. Sempre
+									garantindo que as mensagens fossem coesas com toda a produção
+									escrita da marca (redes sociais, e-mail marketing, etc).
 									<br /><br />
-									A partir disso, começamos a reformular materiais internos da
-									empresa, como manuais para colaboradores e apresentações
-									institucionais. Nossa estratégia incluiu a gestão das redes
-									sociais da empresa, com pautas que reforçam seus pontos fortes
-									e peças alinhadas à nova identidade.
+									Desenvolvemos
+									<strong>anúncios para vendas de máscaras no B2B</strong> que
+									demonstram a importância desse item de segurança nos dias
+									atuais. Tem mais, garantimos que as publicações tocassem em
+									como as máscaras são produzidas com alto rigor em segurança e
+									preocupação com a sustentabilidade. <br /><br />
+									Por meio de um briefing detalhado, chegamos na mensagem
+									precisa que fez sentido tanto para o branding da marca, quanto
+									para focar nas vendas B2B.
 								</p>
 							</div>
 						</div>
@@ -288,47 +329,92 @@
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-md-3 col-12"></div>
-						<div class="col-md-6 col-12 text-center">
+						<div class="col-md-1 col-12"></div>
+						<div class="col-md-10 col-12 text-center">
 							<p class="subtitle">OS RESULTADOS</p>
 							<img src="../assets/img/cases/divisóriaPreta.png" alt="Faixa" />
 							<br />
 							<p>
-								Após a implementação da nova identidade, seu
-								<strong>
-									engajamento nos canais digitais começou a crescer.
-								</strong>
-								<br /><br />
-								No LinkedIn, o aumento no número de seguidores foi de
-								<strong style="font-size: 26px"> mais de 220%.</strong>
-								<br /><br />
+								A estratégia mostrou resultados já nos primeiros meses, para se
+								ter um parâmetro de comparação, em
+								<strong
+									>Setembro de 2020, antes do início do nosso projeto</strong
+								>, a empresa contava com números como:
 							</p>
 						</div>
 					</div>
-					<div class="row pb-5">
-						<div class="col-md-1 col-12"></div>
-						<div class="col-md-10 col-12 text-center">
+					<div class="row" style="padding: 40px 0 0">
+						<div class="col-md-3 col-12 text-center">
 							<p>
-								Por meio de postagens que mostram imagens reais da empresa e seu
-								caráter empregador,
-								<br />
-								<strong style="font-size: 26px">
-									conseguimos potencializar as interações.</strong
-								>
-								<br /><br />
-								De modo geral, o
-								<strong>posicionamento da marca se fortaleceu</strong>
-								, bem como o seu
-								<strong>reconhecimento no mercado</strong>. Sua comunicação
-								passou a destacar a
-								<strong>
-									excelência de sua estrutura, reforçando seu profissionalismo
-								</strong>
-								e sua
-								<strong>
-									capacidade de atender empresas de grande porte de forma
-									personalizada </strong
-								>.
+								<strong style="font-size: 24px">11.053</strong><br />
+								<strong>usuários no site</strong>
+							</p>
+						</div>
+						<div class="col-md-3 col-12 text-center">
+							<p>
+								<strong style="font-size: 24px">12.967</strong><br />
+								<strong>sessões abertas</strong>
+							</p>
+						</div>
+						<div class="col-md-3 col-12 text-center">
+							<p>
+								<strong style="font-size: 24px">26.684</strong><br />
+								<strong>visualizações das páginas</strong>
+							</p>
+						</div>
+						<div class="col-md-3 col-12 text-center" style="">
+							<p>
+								Levantando um total de<br />
+								<strong style="font-size: 24px">0</strong> <br />
+								<strong>leads nas interações</strong>
+							</p>
+						</div>
+					</div>
+					<div class="row" style="padding: 40px 0 0">
+						<div class="col-md-3 col-12"></div>
+						<div class="col-md-6 col-12 text-center">
+							<p>
+								<strong>Após o início das campanhas</strong>, nós registramos já
+								no primeiro trimestre de 2021 números como:
+							</p>
+						</div>
+					</div>
+					<div class="row" style="padding: 40px 0 0">
+						<div class="col-md-3 col-12 text-center">
+							<p>
+								<strong style="font-size: 24px">24.267</strong><br />
+								<strong>usuários</strong>
+							</p>
+						</div>
+						<div class="col-md-3 col-12 text-center">
+							<p>
+								<strong style="font-size: 24px">26.978</strong><br />
+								<strong>sessões no mês de maio</strong>
+							</p>
+						</div>
+						<div class="col-md-3 col-12 text-center">
+							<p>
+								<strong style="font-size: 24px">63.076</strong><br />
+								<strong>visualizações da página</strong>
+							</p>
+						</div>
+						<div class="col-md-3 col-12 text-center" style="">
+							<p>
+								E o número marcante de <br /><strong style="font-size: 24px"
+									>831</strong
+								><br />
+								<strong>novos leads</strong>.
+							</p>
+						</div>
+					</div>
+					<div class="row" style="padding: 20px 0 0">
+						<div class="col-md-2 col-12"></div>
+						<div class="col-md-8 col-12 text-center">
+							<p>
+								Aumentando a média de leads por mês em 118 novos contatos para
+								vendas de máscaras no B2B. Com um <strong>CTR de 6,68%</strong>.
+								Números expressivos, que mostram a força da estratégia
+								utilizada.
 							</p>
 						</div>
 					</div>
@@ -341,29 +427,43 @@
 			<section class="seja">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6 col-12 notebook">
-							<img src="../assets/img/laptop.png" alt="Notebook" />
+						<div class="col-md-6 col-12">
+							<h2 class="home-title">Dê o próximo passo</h2>
+							<hr />
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 col-12">
+							<p class="home-text pt-3">
+								A Poussée é uma agência full service que atua no crescimento de
+								marcas. Desenvolvemos ações de
+								<a
+									href="https://blog.poussee.com.br/inbound-marketing/"
+									target="_blank"
+									style="color: #66bc66"
+									><strong>marketing</strong></a
+								>
+								sempre com foco em performance. <br /><br />Independente da sua
+								área de atuação, temos certeza que podemos desenvolver soluções
+								perfeitas para a sua empresa. Assim como alavancamos a venda de
+								máscaras no B2B para a nossa parceira. <br /><br />Temos um time
+								preparado para lhe atender e propor as melhores soluções para o
+								seu negócio.
+								<a
+									href="https://web.whatsapp.com/send?phone=5511968864108&text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Ag%C3%AAncia%20Pouss%C3%A9e,%20estou%20entrando%20em%20contato%20pelo%20website."
+									target="_blank"
+									style="color: #66bc66"
+									>Envie uma mensagem</a
+								>
+								agora mesmo e impulsione o sucesso da sua empresa!
+							</p>
 						</div>
 						<div class="col-md-6 col-12">
-							<p class="subtitle">Seja Poussée</p>
-							<hr />
-							<h2 class="home-title">
-								Veja como podemos<br />
-								levar seu negócio<br />
-								a outrao patamar<br />
-								de sucesso.
-							</h2>
-							<p class="home-text pt-3">
-								<a href="./cases.html" class="btn-green"
-									>Confira mais cases
-									<img src="../assets/img/arrow.png" alt="Seta"
-								/></a>
-								<br />
-								<a href="../contato.html" class="btn-green"
-									>Quero falar com vocês
-									<img src="../assets/img/arrow.png" alt="Seta"
-								/></a>
-							</p>
+							<img
+								style="width: 100%"
+								src="../assets/img/laptop.png"
+								alt="Notebook"
+							/>
 						</div>
 					</div>
 				</div>
