--- a/o-que-fazemos/desenvolvimento.html
+++ b/o-que-fazemos/desenvolvimento.html
@@ -430,8 +430,17 @@
 				<div class="row text-center">
 					<div class="col-12">
 						<img src="../assets/img/selo-site.png" alt="Selo site Poussée" />
+						<img
+							class="footer-rd-seal"
+							src="../assets/img/selo-rd.png"
+							alt="Selo site Poussée"
+						/>
+					</div>
+					<div class="col-12">
 						<br />
-						<p>© Poussée 2021. Todos os direitos reservados.</p>
+						<p class="copy-right">
+							© Poussée 2021. Todos os direitos reservados.
+						</p>
 					</div>
 				</div>
 			</div>
