--- a/contato.html
+++ b/contato.html
@@ -118,7 +118,9 @@
 									</li>
 								</ul>
 							</li>
-							<li class="p-2 nav-item"><a href="./cases/cases.html">Nossos cases</a></li>
+							<li class="p-2 nav-item">
+								<a href="./cases/cases.html">Nossos cases</a>
+							</li>
 							<li class="p-2 nav-item">
 								<a href="https://blog.poussee.com.br/">Blog</a>
 							</li>
@@ -319,8 +321,17 @@
 				<div class="row text-center">
 					<div class="col-12">
 						<img src="./assets/img/selo-site.png" alt="Selo site Poussée" />
+						<img
+							class="footer-rd-seal"
+							src="./assets/img/selo-rd.png"
+							alt="Selo site Poussée"
+						/>
+					</div>
+					<div class="col-12">
 						<br />
-						<p>© Poussée 2021. Todos os direitos reservados.</p>
+						<p class="copy-right">
+							© Poussée 2021. Todos os direitos reservados.
+						</p>
 					</div>
 				</div>
 			</div>
